@@ -203,6 +203,12 @@ default_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mitosis,
 # "unexpected" problems are related to mitosis (and/or mergetable).
 no_mitosis_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 
+# The sequential pipe line is (and should be kept!) identical to the default
+# pipeline, except that optimizers mitosis & dataflow are omitted.  It is
+# use mainly to make some tests work deterministically, i.e., avoid
+# ambigious output, by avoiding parallelism.
+sequential_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,history,multiplex,garbageCollector
+
 # The default pipeline used in the November 2009 release
 nov2009_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 
