@@ -1,5 +1,5 @@
 -- disable parallelism (mitosis & dataflow) to avoid ambiguous results 
-set optimizer='inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,history,multiplex,garbageCollector';
+set optimizer='sequential_pipe';
 create table SF_2596114 (x double);
 explain select power(x,2) from SF_2596114;
 explain select x*x from SF_2596114;
